--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+
+
 .App {
   text-align: center;
+  min-height: 400vh;
+  background-image: linear-gradient(to bottom right, rgb(11, 174, 45), rgb(229, 236, 233));
 }
 
 .App-logo {
@@ -9,16 +13,17 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+   
   }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: rgb(11, 174, 45);
+  
+  min-height: 10vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  align-items: flex-start;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
