--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 .App {
   text-align: left;
-  min-height: 400vh;
+  min-height: 200vh;
   background-image: linear-gradient(to bottom right, rgb(11, 174, 45), rgb(229, 236, 233));
 }
 
@@ -44,23 +44,35 @@
 
 
 .mainBox {
-  background-color: red;
+  background-color: rgb(11, 174, 45);
+  
   display: flex;
   flex-direction: column;
 }
 
-.vertNav {
-  background-color: red;
+.vertNav  {
+  background-color: rgb(11, 174, 45);
   display: flex;
+  height: 300px;
   flex-direction: column;
   justify-content: flex-start;
   margin-top: 6vw;;
   padding: 5px;
+}
 
+.horzNav {
+  background-color: rgb(11, 174, 45);
+  display: flex;
+  height: 85px;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top: 6vw;;
+  padding: 5px;
 }
 
 .articleBox {
-  background-color: blue;
+  background-color: rgb(11, 174, 45);
+  height: 100%;
   display: flex;
   flex-direction: row;
 }
