--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,6 @@
 
 .App-header {
   background-color: rgb(11, 174, 45);
-  
   min-height: 10vh;
   display: flex;
   flex-direction: row;
@@ -51,7 +50,7 @@
 }
 
 .vertNav  {
-  background-color: rgb(11, 174, 45);
+  background-color: rgb(46, 163, 0);
   display: flex;
   height: 300px;
   flex-direction: column;
@@ -61,23 +60,24 @@
 }
 
 .horzNav {
-  background-color: rgb(11, 174, 45);
+  background-color: rgb(46, 163, 0);
   display: flex;
   height: 85px;
   flex-direction: row;
   justify-content: space-evenly;
-  margin-top: 6vw;;
+  margin-top: .5vw;
+  margin-bottom: -1.5vw;
   padding: 5px;
 }
 
 .articleBox {
-  background-color: rgb(11, 174, 45);
+  background-color: rgb(46, 163, 0);
   height: 100%;
   display: flex;
   flex-direction: row;
 }
 
 .navIcon {
-  margin-top: 10px;;
+  margin-top: 10px;
   padding: 5px;
 }
